--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,300;0,400;0,600;0,700;0,800;0,900;1,400&display=swap');
+/* font-family: 'Raleway', sans-serif;
+font-family: 'Teko', sans-serif; */
 
 * {
   margin: 0;
@@ -7,7 +8,7 @@
 }
 
 body {
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Raleway', sans-serif;
 }
 
 a {
@@ -17,4 +18,18 @@ a {
 
 ul {
   list-style: none;
+}
+
+button {
+  margin: 20px;
+  padding: .6em 1em;
+  border-radius: 10px;
+  border: 0;
+  background-color: #1d1d1d;
+  color: whitesmoke;
+  cursor: pointer;
+}
+
+.green {
+  background-color: #009879;
 }
