--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,6 @@
+/* font-family: 'Raleway', sans-serif;
+font-family: 'Teko', sans-serif; */
+
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,300;0,400;0,600;0,700;0,800;0,900;1,400&display=swap');
 
 * {
@@ -7,7 +10,7 @@
 }
 
 body {
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Raleway', sans-serif;
 }
 
 a {
