--- a/src/Users/Arsen_E/App.scss
+++ b/src/Users/Arsen_E/App.scss
@@ -12,8 +12,6 @@ color: gray;
 
 }
 
-
-
 &-container{
 display: flex;
 padding: 1em;
@@ -28,9 +26,6 @@ padding: 10px;
 text-align: left;
 background-image: linear-gradient(90deg, rgba(2,0,36,1) 20%, rgba(0,212,255,1) 81%);
 height: 400px;
-
-
-
 }
 
 h2{
@@ -45,24 +40,14 @@ font-size: 14px;
 line-height: 1.6;
 text-indent: 15px;
 color: bisque;
-
 }
 
 img{
 width: 280px;
 height: 180px;
 object-fit: cover;
-}
 
-
-}
-
-
-
-
-
-
-}
+}}}
 
 
 
