--- a/src/Users/Arsen_V/Homework6/App.css
+++ b/src/Users/Arsen_V/Homework6/App.css
@@ -18,7 +18,7 @@ h2 {
   color: #fff;
   font-size: 50px;
   letter-spacing: 1px;
-  margin-bottom: 80px;
+  margin-bottom: 20px;
 }
 .list ul {
   position: relative;
@@ -64,4 +64,6 @@ h2 {
 .cross{
     float: right;
     color: black;
+    top: -40px;
+    font-size: 22px;
 }
