--- a/src/Users/Hayk/homework1/App.scss
+++ b/src/Users/Hayk/homework1/App.scss
@@ -1,27 +1,27 @@
-body{
-    height: 5000px;
-    background: linear-gradient(#e66465, #9198e5); 
-.Container{
-
+body {
+  background: linear-gradient(#e66465, #9198e5);
+  .Container {
     width: 1140px;
     margin: 0 auto;
     display: flex;
-    justify-content:space-around;
+    justify-content: space-around;
     flex-wrap: wrap;
     gap: 20px;
-    .Box{
-        box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
-        background-color: beige;
+    .Box {
+      box-shadow:
+        rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset,
+        rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
+      background-color: beige;
 
-        padding: 3em;
-        width: 30%;
-        border-radius: 15px;
-        position: relative;
-        transition: all 0.5s;
-        &:hover{
-            scale: 1.03;
-        }
-     &_id{
+      padding: 3em;
+      width: 30%;
+      border-radius: 15px;
+      position: relative;
+      transition: all 0.5s;
+      &:hover {
+        scale: 1.03;
+      }
+      &_id {
         position: absolute;
         top: 5px;
         left: 5px;
@@ -29,13 +29,13 @@ body{
         height: 50px;
         line-height: 50px;
         background-color: rgb(101, 75, 75);
-    font-size: 20px;
-    font-weight: 900;
-    color: bisque;
-    text-align: center;
+        font-size: 20px;
+        font-weight: 900;
+        color: bisque;
+        text-align: center;
         border-radius: 50%;
-     }
-     &_delete{
+      }
+      &_delete {
         position: absolute;
         top: 8px;
         right: 10px;
@@ -43,10 +43,10 @@ body{
         color: red;
         font-weight: 900;
         cursor: pointer;
-        &:hover{
-            scale: 1.4;
+        &:hover {
+          scale: 1.4;
         }
-     }
-       }
-}
+      }
+    }
+  }
 }
