--- a/src/index.css
+++ b/src/index.css
@@ -23,3 +23,13 @@ a {
 ul {
   list-style: none;
 }
+
+li {
+  border: 2px solid #000;
+  padding: 1em;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 400px;
+  margin: 10px;
+}
