--- a/src/Users/Hayk/homework11/pages/Users.scss
+++ b/src/Users/Hayk/homework11/pages/Users.scss
@@ -1,9 +1,18 @@
 .Users {
-  width: 1100px;
-  margin: 0 auto;
-  border: 1px solid black;
-  background-color: aliceblue;
-  pre {
-    white-space: pre-wrap;
+  width: 1140px;
+  margin: 25px auto;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  gap: 20px;
+  .comments {
+    cursor: pointer;
+    width: 30%;
+    border-radius: 15px;
+    padding: 1em;
+    box-shadow: 0px 3px 17px lightblue;
+  }
+  h2 {
+    font-weight: 500;
   }
 }
