--- a/src/Users/Martin/Lesson22/child.scss
+++ b/src/Users/Martin/Lesson22/child.scss
@@ -3,5 +3,14 @@ ul {
     gap: 20px;
     flex-wrap: wrap;
     width: 90%;
-    
+    margin: 20px auto;
+    padding: 1em;
+    li{
+        padding: 5px 10px;
+        border-radius: 6px;
+        font-size: 20px;
+        border: 1px solid grey;
+        flex-basis: 80px;
+        text-align: center;
+    }
 }
