--- a/src/App.css
+++ b/src/App.css
@@ -4,4 +4,36 @@
   padding: 2rem;
   line-height: 1.6;
 }
+body{
+  background-color: #222;
+}
+
+h1{
+ text-align: center;
+ color: aliceblue;
+}
+.button{
+  display: flex;
+  justify-content: center;
+  gap: 30px;
+  margin-top: 20px;
+ 
+}
+button{
+  width: 100px;
+  padding: 8px;
+  border-radius: 6px;
+  font-size: 16px;
+  font-weight: 700;
+  border: 4px white;
+}
+pre{
+  color: aliceblue;
+  margin-top: 30px;
+  border: 2px solid white;
+  border-radius: 10px;
+  overflow-wrap: break-word;
+ 
+ 
+}
 
