--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,9 @@
-/* font-family: 'Raleway', sans-serif;
-font-family: 'Teko', sans-serif; */
-
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,300;0,400;0,600;0,700;0,800;0,900;1,400&display=swap");
+
+:root {
+  --body-bg: #191919;
+}
+
 
 * {
   margin: 0;
@@ -11,6 +13,9 @@ font-family: 'Teko', sans-serif; */
 
 body {
   font-family: "Raleway", sans-serif;
+  max-width: 1440px;
+  margin: 0 auto;
+  background: var(--body-bg);
 }
 
 a {
