--- a/src/components/posts/PostList.css
+++ b/src/components/posts/PostList.css
@@ -1,4 +1,4 @@
-.Todo{
+.Post{
     width: 70%;
     margin: 40px auto;
     padding: 1em;
@@ -8,6 +8,9 @@ p{
     background-color: #333;
     padding: 2em;
     white-space: pre-wrap;
-    color: #009879;
+    color: rgb(247, 138, 4);
     font-size: 20px;
+
 }
+
+/* border: 1px solid rgb(14, 226, 14); */
