--- a/src/App.css
+++ b/src/App.css
@@ -1,75 +1,33 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  line-height: 1.6;
-}
+.App{
+    width: 1140px;
+    margin: 0 auto;
+       &>form{
+         margin: 0 auto;
+         width: 50%;
+         text-align: center;
+         &>input{
+            padding: 0.6em;
+            border-radius: 15px;
+            cursor: pointer;
+        }
+        &>input[type="text"]{
+            width: 200px;
+            cursor:auto;
+         }
+       }
+       &>ul{
+         width: 20%;
+         text-align: center;
+         margin: 0 auto;
+         &>li{
+            width: 100%;
+            padding: 0.6em;
+            margin-top: 15px;
+            border: 1px solid grey;
+            border-radius: 15px;
+            background-color: aqua;
+            font-weight: 900
 
-h1 {
-  padding: .5em 0;
-  color: #111;
-  margin-bottom: 20px;
-  border-bottom: 2px solid #eee;
-}
-
-.blog-item {
-  margin-bottom: 20px;
-  padding: 1em;
-  transition: transform .3s;
-  position: relative;
-  overflow: hidden;
-}
-
-.blog-item:hover {
-  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
-  transform: translateY(-4px);
-  transition: transform .3s;
-}
-
-.blog-item.active {
-  border: 2px solid #111;
-  background-image: linear-gradient(90deg, rgb(111, 231, 255), rgba(70, 243, 255, 0.741) 76.05%);
-
-}
-
-.blog-item.active::before {
-  content: "\2714";
-  position: absolute;
-  top: 0px;
-  right: 10px;
-  color: #024827;
-  font-weight: 900;
-  font-size: 30px;
-}
-
-.btn-delete {
-  margin-top: 20px;
-  padding: 0.6em 1em;
-  background-color: #929292;
-  color: #fff;
-  font-weight: 300;
-  cursor: pointer;
-  border-radius: 4px;
-  border: 1px solid #0988a1;
-  position: absolute;
-  bottom: -50px;
-  transform: rotate(90deg);
-  transform-origin: left;
-  transition: all .3s;
-}
-
-.blog-item.active .btn-delete {
-  background-color: #ff0404;
-  color: #fff;
-  bottom: 10px;
-  transition: all .3s;
-  transform: rotate(0deg);
-  transform-origin: left;
-}
-
-hr {
-  background-color: transparent;
-  height: 30px;
-  margin-bottom: 40px;
-  border: 0;
+         }
+       }
 }
