--- a/src/components/todos/TodoList.css
+++ b/src/components/todos/TodoList.css
@@ -3,10 +3,29 @@
     margin: 40px auto;
     padding: 1em;
 }
-p{
+/* p{
     background-color: #333;
     padding: 2em;
     white-space: pre-line;
     color: #009879;
     font-size: 20px;
+} */
+button{
+    margin: 20px;
+    cursor: pointer;
+    border-radius: 50%;
+    /* width: 50px; */
+    height: 50px;
+    font-weight: 700;
+    font-size: 20px;
+    border: 2px solid #fff;
+}
+.completed{
+    background: green;
+}
+.uncompleted{
+    background: red;
+}
+.all{
+    background: rgb(5, 5, 141);
 }
