--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,13 @@
 /* font-family: 'Raleway', sans-serif;
 font-family: 'Teko', sans-serif; */
 
+
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,300;0,400;0,600;0,700;0,800;0,900;1,400&display=swap");
 
 
 
 :root{
-  --body-bg: #191919;
+  --body-bg: #fff;
 }
 
 * {
