--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 /* font-family: 'Raleway', sans-serif;
 font-family: 'Teko', sans-serif; */
 
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,300;0,400;0,600;0,700;0,800;0,900;1,400&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,300;0,400;0,600;0,700;0,800;0,900;1,400&display=swap');
 
 * {
   margin: 0;
@@ -10,7 +10,8 @@ font-family: 'Teko', sans-serif; */
 }
 
 body {
-  font-family: "Raleway", sans-serif;
+  font-family: 'Montserrat', sans-serif;
+
 }
 
 a {
@@ -20,4 +21,45 @@ a {
 
 ul {
   list-style: none;
+}
+
+.slick-slide>div {
+  padding: 20px;
+}
+
+.slick-slider {
+  width: 80%;
+  margin: 40px auto;
+  padding-top: 100px;
+  position: relative;
+}
+
+.slick-next, .slick-prev {
+  border: 2px solid #282A30;
+  border-radius: 10px;
+  width: 48px;
+  height: 48px;
+  top: 0;
+  color: #282A30;
+}
+
+
+
+.slick-prev {
+  left: 90%;
+}
+
+.slick-next {
+  right: 0;
+}
+
+.slick-next::before {
+  opacity: 1;
+  content: url('./Vector 2.png');
+  color: #282A30;
+}
+
+.slick-prev:before {
+  color: #282A30;
+  content: url('./Vector 1.png');
 }
