--- a/src/Users/Hayk/pagination/App.scss
+++ b/src/Users/Hayk/pagination/App.scss
@@ -69,7 +69,13 @@ body{
             box-shadow: 0px 3px 17px rgb(138, 134, 134);
             scale: 1.1;
             
-          }
-
+        }
+        
+    }
+    .video{
+        width: 300px;
+        margin: 0 auto;
+      border-radius: 15px;
+      border: 5px solid white;
     }
 }
